problem in progress

--- a/src/blocks/components/_components.scss
+++ b/src/blocks/components/_components.scss
@@ -2,7 +2,8 @@
 @import "form/form";
 @import "form-filter/form-filter";
 @import "field/field";
-//@import "field-range/field-range";
+@import "field-file/field-file";
+@import "field-photos/field-photos";
 @import "btn/btn";
 @import "breadcrumbs/breadcrumbs";
 @import "socials/socials";
@@ -10,9 +11,4 @@
 @import "slider-controls/slider-controls";
 @import "tooltip/tooltip";
 @import "pagination/pagination";
-//@import "quote/quote";
-//@import "video/video";
-//@import "cookie/cookie";
-//@import "media-slider/media-slider";
 @import "spoiler/spoiler";
-//@import "price-list/price-list";
