--- a/src/blocks/modules/_modules.scss
+++ b/src/blocks/modules/_modules.scss
@@ -13,3 +13,4 @@
 @import "e-suppliers/e-suppliers";
 @import "e-cars/e-cars";
 @import "analytics-list/analytics-list";
+@import "s-problem/s-problem";
