--- a/src/views/helpers/mixins.pug
+++ b/src/views/helpers/mixins.pug
@@ -4,6 +4,8 @@ mixin mixins()
     include ../../blocks/components/form/form
     include ../../blocks/components/form-filter/form-filter
     include ../../blocks/components/field/field
+    include ../../blocks/components/field-file/field-file
+    include ../../blocks/components/field-photos/field-photos
     include ../../blocks/components/modal/modal
     include ../../blocks/components/breadcrumbs/breadcrumbs
     include ../../blocks/components/socials/socials
@@ -26,3 +28,4 @@ mixin mixins()
     include ../../blocks/modules/e-suppliers/e-suppliers
     include ../../blocks/modules/e-cars/e-cars
     include ../../blocks/modules/analytics-list/analytics-list
+    include ../../blocks/modules/s-problem/s-problem
