--- a/src/blocks/modules/s-problem/s-problem.pug
+++ b/src/blocks/modules/s-problem/s-problem.pug
@@ -180,6 +180,7 @@ mixin s-problem(props= defaultSProblemProps)
                                         'required': '',
                                         "data-type": "number"
                                     },
+                                    note: 'Рекомендуемая цена 2 562 678 - 3 000 000'
                                 })
 
                     .s-problem__right
