--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -141,7 +141,7 @@ block content
                     a.pages-list__link.pages-list__link--check(href="s-analytics.html" target="_blank") Аналитика
                     a.pages-list__link.pages-list__link--check(href="s-purchase.html" target="_blank") Запросы на покупку
                     a.pages-list__link.pages-list__link--check(href="s-problem.html" target="_blank") Проблемные автомобили
-                    a.pages-list__link.pages-list__link--work(href="s-problem-car.html" target="_blank") Проблемные автомобили (детальная)
+                    a.pages-list__link.pages-list__link--check(href="s-problem-car.html" target="_blank") Проблемные автомобили (детальная)
                     a.pages-list__link.pages-list__link--check(href="s-cars.html" target="_blank") Мои автомобили
                     a.pages-list__link.pages-list__link--check(href="s-cars-archive.html" target="_blank") Архивные автомобили
 
