--- a/src/blocks/components/field-photos/field-photos.pug
+++ b/src/blocks/components/field-photos/field-photos.pug
@@ -19,50 +19,10 @@ mixin field-photos(props = defaultFieldPhotosProps)
 
     .field-photos(class= checkProps.classes data-js="fieldPhotos")&attributes(attributes)
 
-        .field-photos__item
-            input.field-photos__input(type='file')&attributes(checkProps.inputAttr)
-            .field-photos__img
-                img(src="img/catalog-product/cp_intro_1.webp" alt="")
-            .field-photos__remove(data-js='fieldPhotosRemove')
-                svg
-                    use(xlink:href=`img/sprites/sprite.svg#close`)
-
-        .field-photos__item
-            input.field-photos__input(type='file')&attributes(checkProps.inputAttr)
-            .field-photos__img
-                img(src="img/catalog-product/cp_intro_1.webp" alt="")
-            .field-photos__remove(data-js='fieldPhotosRemove')
-                svg
-                    use(xlink:href=`img/sprites/sprite.svg#close`)
-
-        .field-photos__item
-            input.field-photos__input(type='file')&attributes(checkProps.inputAttr)
-            .field-photos__img
-                img(src="img/catalog-product/cp_intro_1.webp" alt="")
-            .field-photos__remove(data-js='fieldPhotosRemove')
-                svg
-                    use(xlink:href=`img/sprites/sprite.svg#close`)
-
-        .field-photos__item
-            input.field-photos__input(type='file')&attributes(checkProps.inputAttr)
-            .field-photos__img
-                img(src="img/catalog-product/cp_intro_1.webp" alt="")
-            .field-photos__remove(data-js='fieldPhotosRemove')
-                svg
-                    use(xlink:href=`img/sprites/sprite.svg#close`)
-
-        .field-photos__item
-            input.field-photos__input(type='file')&attributes(checkProps.inputAttr)
-            .field-photos__img
-                img(src="img/catalog-product/cp_intro_1.webp" alt="")
-            .field-photos__remove(data-js='fieldPhotosRemove')
-                svg
-                    use(xlink:href=`img/sprites/sprite.svg#close`)
-
-
         .field-photos__item.field-photos__label(data-js="fieldPhotosLabel")
             .field-photos__add.btn.btn--accent.btn--small
                 svg
                     use(xlink:href="img/sprites/sprite.svg#photo")
                 span.btn__text Загрузить фото
+            .field-photos__error(data-js="fieldPhotosError") Загрузите фото в формате .jpeg / .jpg / .png / .webp
 
