--- a/src/blocks/components/field-photos/field-photos.scss
+++ b/src/blocks/components/field-photos/field-photos.scss
@@ -12,7 +12,9 @@
     }
 
     &__item {
-        position: relative;
+        position: absolute;
+        opacity: 0;
+        visibility: hidden;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -21,7 +23,14 @@
         flex: 0 0 calc((100% - 80px) / 5);
         aspect-ratio: 1 / 0.75;
         border-radius: 8px;
+        border: 1px solid #E4E4E7;
         overflow: hidden;
+
+        &.visible {
+            position: relative;
+            opacity: 1;
+            visibility: visible;
+        }
 
         @include max(full) {
             flex: 0 0 calc((100% - 60px) / 4);
@@ -41,7 +50,16 @@
     }
 
     &__label {
+        border-color: $c-accent;
         cursor: pointer;
+        position: relative;
+        opacity: 1;
+        visibility: visible;
+        transition: all $tr-time linear;
+    }
+
+    &__label.error {
+        border-color: $c-error;
     }
 
     &__label:hover &__add {
@@ -109,5 +127,23 @@
         overflow: hidden;
         opacity: 0;
         z-index: -10;
+    }
+
+    &__error {
+        position: absolute;
+        bottom: 5px;
+        left: 5px;
+        width: calc(100% - 5px);
+        opacity: 0;
+        visibility: hidden;
+        transition: all $tr-time linear;
+        font-size: 12px;
+        line-height: 1.4em;
+        color: $c-error;
+    }
+
+    &__label.error &__error {
+        opacity: 1;
+        visibility: visible;
     }
 }
