--- a/src/blocks/components/field/field.pug
+++ b/src/blocks/components/field/field.pug
@@ -20,7 +20,8 @@
         isDouble: false,
         placeholder2: '',
         selectOptions2: '',
-        inputAttr2: {}
+        inputAttr2: {},
+        note: ''
     }
 
 mixin field(props = defaultFieldProps)
@@ -43,7 +44,8 @@ mixin field(props = defaultFieldProps)
             isDouble: props.isDouble ? props.isDouble : defaultFieldProps.isDouble,
             placeholder2: props.placeholder2 ? props.placeholder2 : defaultFieldProps.placeholder2,
             inputAttr2: props.inputAttr2 ? props.inputAttr2 : defaultFieldProps.inputAttr2,
-            selectOptions2: props.selectOptions2 ? props.selectOptions2 : defaultFieldProps.selectOptions2
+            selectOptions2: props.selectOptions2 ? props.selectOptions2 : defaultFieldProps.selectOptions2,
+            note: props.note ? props.note : defaultFieldProps.note,
         }
 
 
@@ -109,6 +111,9 @@ mixin field(props = defaultFieldProps)
                             option(label=" ")!= checkProps.selectOptions[optionCount]
                         - optionCount++
                 span.field__error(data-js='fieldError')
+
+        - if(checkProps.note.length > 0)
+            .field__note!= checkProps.note
 
         -if(checkProps.isDouble == true)
             label
