--- a/src/blocks/modules/manual-adding/manual-adding.pug
+++ b/src/blocks/modules/manual-adding/manual-adding.pug
@@ -322,6 +322,8 @@ mixin manual-adding(props= defaultManualAddingProps)
                                     placeholder: 'Дополнительная информация',
                                 })
 
+                                +field-photos
+
                             +btn({
                                 classes: 'form__submit manual-adding__submit',
                                 type: 'button',
