field photos fix

--- a/src/blocks/components/field-photos/field-photos.pug
+++ b/src/blocks/components/field-photos/field-photos.pug
@@ -17,7 +17,7 @@ mixin field-photos(props = defaultFieldPhotosProps)
             inputAttr: props.inputAttr ? props.inputAttr : defaultFieldPhotosProps.inputAttr,
         }
 
-    .field-photos(class= checkProps.classes data-js="fieldPhotos")&attributes(attributes)
+    .field-photos(class= checkProps.classes data-hidden="PROPERTY[242]" data-name="PROPERTY_FILE_242_" data-js="fieldPhotos")&attributes(attributes)
 
         .field-photos__item.field-photos__label(data-js="fieldPhotosLabel")
             .field-photos__add.btn.btn--accent.btn--small
