--- a/src/blocks/modules/e-suppliers/e-suppliers.pug
+++ b/src/blocks/modules/e-suppliers/e-suppliers.pug
@@ -233,7 +233,7 @@ mixin e-suppliers(props= defaultESuppliersProps)
                                     sMode: 'mini',
                                     cMode: 'light-accent',
                                     icon: 'cancel'
-                                })
+                                })(data-modal="#supplierBlockingModal")
 
 
 
