--- a/src/blocks/modules/e-suppliers/e-suppliers.scss
+++ b/src/blocks/modules/e-suppliers/e-suppliers.scss
@@ -24,6 +24,7 @@
             display: grid;
             grid-template-columns: repeat(4, minmax(0, 1fr));
             gap: 14px;
+            height: auto;
 
             @include max(laptop) {
                 grid-template-columns: repeat(2, minmax(0, 1fr));
