--- a/src/blocks/components/field/field.scss
+++ b/src/blocks/components/field/field.scss
@@ -707,7 +707,13 @@
         top: 10px;
 
         .select2-search {
-            display: none;
+            //display: none;
+
+        }
+
+        .select2-search__field {
+            border-radius: 4px;
+            border-color: $c-bg-input;
         }
 
         .select2-results {
