--- a/src/blocks/modules/manual-adding/manual-adding.pug
+++ b/src/blocks/modules/manual-adding/manual-adding.pug
@@ -39,7 +39,7 @@ mixin manual-adding(props= defaultManualAddingProps)
                                     })
                                 .form__flex
                                     +field({
-                                        classes: '',
+                                        classes: 'has-search',
                                         tag: 'select',
                                         placeholder: 'Бренд',
                                         selectOptions: [
