--- a/src/blocks/modules/manual-adding/manual-adding.pug
+++ b/src/blocks/modules/manual-adding/manual-adding.pug
@@ -87,6 +87,7 @@ mixin manual-adding(props= defaultManualAddingProps)
                                         ],
                                         inputAttr: {
                                             'required': '',
+                                            'data-filterable': ''
                                         },
                                     })
                                     +field({
