--- a/src/blocks/modules/e-suppliers/e-suppliers.scss
+++ b/src/blocks/modules/e-suppliers/e-suppliers.scss
@@ -89,6 +89,9 @@
     }
 
     &__title {
+        display: flex;
+        align-items: center;
+        gap: 8px;
         font-family: $ff-inter;
         font-weight: 700;
         font-size: 16px;
