--- a/src/blocks/modules/manual-adding/manual-adding.pug
+++ b/src/blocks/modules/manual-adding/manual-adding.pug
@@ -207,7 +207,7 @@ mixin manual-adding(props= defaultManualAddingProps)
                                         placeholder: 'Лошадиные силы по ЭПТС',
                                         inputAttr: {
                                             'required': '',
-                                            'data-type': "number"
+                                            'data-type': "float"
                                         },
                                     })
 
