--- a/src/views/helpers/mixins.pug
+++ b/src/views/helpers/mixins.pug
@@ -13,6 +13,7 @@ mixin mixins()
     include ../../blocks/components/chat/chat
     include ../../blocks/components/tooltip/tooltip
     include ../../blocks/components/pagination/pagination
+    include ../../blocks/components/sort-controller/sort-controller
 
     //- Модули
     include ../../blocks/modules/header/header
