--- a/src/blocks/components/_components.scss
+++ b/src/blocks/components/_components.scss
@@ -12,3 +12,4 @@
 @import "tooltip/tooltip";
 @import "pagination/pagination";
 @import "spoiler/spoiler";
+@import "sort-controller/sort-controller";
