--- a/src/blocks/components/sort-controller/sort-controller.pug
+++ b/src/blocks/components/sort-controller/sort-controller.pug
@@ -17,7 +17,7 @@ mixin sort-controller(props = defaultSortControllerProps)
             .sort-controller__title Цена по возрастанию
             .sort-controller__chevron
                 svg
-                    use(xlink:href=`img/sprites/sprite.svg#arrow_angle_bottom`)
+                    use(xlink:href=`img/sprites/sprite.svg#arrow_angle_down`)
         .sort-controller__links
             a(href="javascript:void(0);").sort-controller__link.disabled Цена по возрастанию
             a(href="javascript:void(0);").sort-controller__link Цена по убыванию
